# cocos-mcp

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  package.json
python/: cocos_mcp_server.py  pyproject.toml
python/src/cocos_mcp_server/: __init__.py  server.py
python/src/cocos_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
